--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Reusme</title>
+        <title>flexbox</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta lang="en">
         <meta http-equiv="refresh" content="30">
@@ -13,7 +13,12 @@
          <link rel="icon" href="img/mylogo.png"> 
         <link rel="stylesheet" href="css/main.css" >
     </head>
-
+<h1> let's  learn  flexbox </h1>
+    <div role="presentation"></div>
+    <div role="presentation"></div>
+    <div role="presentation"></div>
+    <div role="presentation"></div>
+    <div role="presentation"></div>
     
     <body>
    
